--- a/quan_ly_tai_nguyen_rung/Views/AnimalFacility/Index.cshtml
+++ b/quan_ly_tai_nguyen_rung/Views/AnimalFacility/Index.cshtml
@@ -1,14 +1,11 @@
 ﻿@model IEnumerable<quan_ly_tai_nguyen_rung.Models.section4.AnimalFacility>
-@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+
 <div class="album py-5 bg-body-tertiary">
     <div class="container">
         @using (Html.BeginForm("SearchByName", "AnimalFacility", FormMethod.Get))
+
         {
-            <div class="row">
+            <div class="row mb-4">
                 <div class="col-md-8">
                     <input type="text" name="name" class="form-control" placeholder="Nhập tên cơ sở lưu trữ" value="@ViewContext.HttpContext.Request.Query["name"]" />
                 </div>
@@ -17,30 +14,50 @@
                 </div>
             </div>
         }
-        <a type="btn btn-success" asp-controller="AnimalFacility" asp-action="Create" class="btn btn-sm btn-success mb-3">Create</a>
 
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            @foreach (var item in Model)
-            {
-                <div class="col">
-                    <div class="card shadow-sm">
-                        @* <img class="card-img-top" src=@ width:100% height="225" alt="card image cap" /> *@
-                        <div class="card-body">
-                            <p class="card-text">@item.Name</p>
-                            <p class="card-text">this animal live in @item.Acreage</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <a type="btn btn-success" asp-controller="AnimalFacility" asp-action="Detail" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">View</a>
-                                    <a type="btn btn-success" asp-controller="AnimalFacility" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Edit</a>
-                                    <a type="btn btn-success" asp-controller="AnimalFacility" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Delete</a>
+        <a asp-controller="AnimalFacility" asp-action="Create" class="btn btn-sm btn-success mb-3">Create</a>
 
-                                </div>
-                                <small class="text-body-secondary">@item.Address</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            }
-        </div>
+        <table class="table table-striped table-bordered">
+            <thead class="table-dark">
+                <tr>
+                    <th>#</th>
+                    <th scope="col">Tên Cơ Sở</th>
+                    <th scope="col">Diện Tích</th>
+                    <th scope="col">Địa Chỉ</th>
+                    <th scope="col">Hành Động</th>
+                </tr>
+            </thead>
+            <tbody>
+                @if (Model != null && Model.Any())
+
+                {
+                    int index = 1;
+                    foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>@index</td>
+                            <td>@item.Name</td>
+                            <td>@item.Acreage</td>
+                            <td>@item.Address</td>
+                            <td>
+                                <a asp-controller="AnimalFacility" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-warning">Edit</a>
+                                <a asp-controller="AnimalFacility" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">Delete</a>
+                                <a asp-controller="AnimalFacility" asp-action="Detail" asp-route-id="@item.Id" class="btn btn-sm btn-primary">View</a>
+                            </td>
+                        </tr>
+                        index++;
+                    }
+
+                }
+
+                else
+
+                {
+                    <tr>
+                        <td colspan="5" class="text-center">Không có dữ liệu</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
     </div>
 </div>
